src/pages/Authentication.module.scss
@import '../styles/custom-properties.scss';

:root {
  --button-color: #4285f4;
}

.authentication {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  max-height: 100vh;
  z-index: 990;
  background-color: var(--overlay);
  justify-content: center;
  align-items: center;
}
.split {
  display: flex;
  justify-content: center;
}
.imageHalf {
  background-image: url('../assets/stopSign.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  width: 50%;
  height: auto;
  margin: 0;
  @media screen and (max-width: $breakpoint-medium) {
    display: none;
  }
}
.wordsHalf {
  width: 50%;
  height: auto;
  margin: 0;
  @media screen and (max-width: $breakpoint-medium) {
    width: 100%;
  }
}

.header {
  margin: 0 0 1.5rem 0;
}
.modalBody {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  overflow-y: auto;
}
.anonymousAuthButton,
.twitterAuthButton,
.facebookAuthButton,
.googleAuthButton {
  width: auto;
  min-width: 250px;
  max-width: 420px;
  min-height: 3rem;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  color: white;
  border-radius: 0.5rem;
  margin: 0.5rem 0;
  padding: 0.5rem 1rem;
  font-size: large;
  @media (pointer: coarse) {
    @media screen and (max-width: $breakpoint-large) {
      font-size: normal;
    }
  }
}

i {
  font-size: x-large;
  @media (pointer: coarse) {
    @media screen and (max-width: $breakpoint-large) {
      font-size: large;
    }
  }
}

.twitterAuthButton {
  background-color: var(--twitter-blue);
  border: var(--twitter-blue);
  &:hover {
    background-color: white;
    color: var(--twitter-blue);
    border: white;
  }
}
.googleAuthButton {
  background-color: var(--google-red);
  border: var(--google-red);
  &:hover {
    background-color: white;
    color: var(--google-red);
    border: white;
  }
}
.facebookAuthButton {
  background-color: var(--facebook-blue);
  border: var(--facebook-blue);
  &:hover {
    background-color: white;
    color: var(--facebook-blue);
    border: white;
  }
}
.form {
  width: 100%;
  max-width: 420px;
  margin: 0 0 1rem;
  text-align: left;
  border: 1px solid var(--button-color);
  border-radius: 10px;
  padding: 20px;
}
.input {
  width: 100%;
  line-height: 2.5rem;
  margin: 0.5rem 0;
  padding-left: 1rem;
  border-radius: 10px;
  font-size: large;
  @media (pointer: coarse) {
    @media screen and (max-width: $breakpoint-large) {
      font-size: normal;
    }
  }
}
.signupForm,
.loginForm {
  background-color: var(--button-color);
  color: white;
  border: 1px solid var(--button-color);
  border-radius: 10px;
}
.signupForm {
  margin: 0;
  background-color: white;
  color: var(--button-color);
}

.anonymousAuthButton {
  background-color: var(--caution-orange);
  border: var(--caution-orange);
  &:hover {
    background-color: white;
    color: var(--caution-orange);
    border: white;
  }
}

